--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,19 @@ body {
   margin: 0;
   padding: 0;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 /* Шапка */
 .page-header {
   border-bottom: 1px solid var(--border-color-header);
@@ -106,6 +119,8 @@ body {
 .decision {
   background-color: var(--decision-bg-color);
   text-align: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 .decision-title {
   margin-top: 0;
@@ -196,7 +211,7 @@ body {
   background-color: var(--accent-bg-color);
 }
 .team-title {
-  margin-top: 30px;
+  margin-top: 0;
   margin-bottom: 10px;
   color: var(--title-text-color);
   font-weight: 500;
@@ -205,7 +220,7 @@ body {
 }
 .team-text {
   margin-top: 0;
-  margin-bottom: 30px;
+  margin-bottom: 0;
   font-size: 16px;
   line-height: 1.19;
 }
@@ -220,9 +235,11 @@ body {
   background-color: var(--primary-white-color);
   border-radius: 0px 0px 4px 4px;
 }
-
 .team.list .img {
   width: 100%;
+}
+.team .content{
+  padding: 30px;
 }
 /* Футер */
 .page-footer {
