--- a/css/styles.css
+++ b/css/styles.css
@@ -239,7 +239,10 @@ body {
   width: 100%;
 }
 .team .content{
-  padding: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 /* Футер */
 .page-footer {
